ADDED Confirmation Prompt

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
     </form>
     <br />
     <form method="POST" action="/chats/<%=chat.id%>?_method=DELETE">
-        <button>Delete</button>
+        <button class="del-Button">Delete</button>
     </form>
      <p>Send at: <%=chat.created_at.toString().split(" ")[4]%></p>
      <p><%=chat.created_at.toString().split(" ").slice(0,4).join("-")%></p>
@@ -33,5 +33,6 @@
     <br/><br/>
 
        <% } %>
+       <script src="app.js"></script>
 </body>
 </html>
